# mcb-pomodoro

./: CLAUDE.md  README.md  justfile  pyproject.toml
docs/: cli-commands.md  raycast.md  timer-design.md
src/mb_pomodoro/: cli.py  config.py  db.py  output.py  pomodoro.py  process.py  recovery.py  time_utils.py
src/mb_pomodoro/cli/: main.py
src/mb_pomodoro/cli/commands/edit/: delete.py  restart.py
src/mb_pomodoro/commands/: cancel.py  finish.py  history.py  pause.py  resume.py  start.py  status.py  tray.py  undo_start.py  worker.py
src/mb_pomodoro/core/: service.py
src/mcb_pomodoro/: __init__.py  cli.py
src/mcb_pomodoro/commands/: cancel.py  history.py  pause.py  resume.py  start.py  status.py
tests/: __init__.py
tests/mb_pomodoro/: test_time_utils.py
